--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Toll Processor
 logging.level.org.springframework.cloud.task=DEBUG
 
 
-spring.datasource.url=jdbc:mysql://localhost/tasklogs
+spring.datasource.url=jdbc:mysql://localhost:13306/tasklogs
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
